<resources>
    <string name="app_name">Juney Candles</string>
    <string name="log_in">LOG IN</string>
    <string name="signup_title">Please fill in your details</string>
    <string name="juney_display">Juney</string>
    <string name="signup_button">SIGN UP</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">email</string>
    <string name="email">Email</string>
    <string name="hint_address">Address</string>
    <string name="address">Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_birthday">Birthday</string>
    <string name="birthday">Birthday</string>
    <string name="hint_cfpassword">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="back_to_login">Back to Login</string>
    <string name="startup_display">Juney\nScented Candles</string>
    <string name="welcome_display">WELCOME</string>
    <string name="account_query">Do not have an account?</string>
    <string name="forgot_password">I forgot my password!</string>
    <string name="scents_display">Scents</string>
    <string name="themes_display">Themes</string>
    <string name="about_us">About Us</string>
    <string name="floral">Floral</string>
    <string name="fruity">FRUITY</string>
    <string name="gourmand">GOURMAND</string>
    <string name="wood">WOODSY</string>
    <string name="relaxing">RELAXING</string>
    <string name="cart_description">Shopping Cart</string>
    <string name="search_desc">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heartIcon">Favourites</string>
    <string name="back_button">Back</string>
    <string name="userIcon">User Icon</string>
    <string name="zodiac">STAR SIGN SERIES</string>
    <string name="new_collection">NEW COLLECTIONS</string>
    <string name="season">4SEASONS</string>
    <string name="season_desc"><i><b>SPRING, SUMMER, FALL, WINTER</b></i></string>
    <string name="mood">EMOTIONAL SCENTS</string>
    <string name="mood_desc">Smell the wave of emotions</string>
    <string name="holiday">FESTIVAL FAVOURITES</string>
    <string name="holiday_desc"><i>Happy Holidays!</i></string>
    <string name="story">OUR STORY</string>
    <string name="team">THE TEAM</string>
    <string name="contact">CONTACT US</string>
    <string name="logout">Logout</string>
    <string name="verify_message">Your verification code has been sent to this email.</string>
    <string name="code1">Code 1</string>
    <string name="code2">Code 2</string>
    <string name="code3">Code 3</string>
    <string name="code4">Code 4</string>
    <string name="point_redeem">Point Redemption</string>
    <string name="point">Points</string>
    <string name="username">Username</string>
    <string name="saveBtn">Save</string>
    <string name="edit">Edit</string>
    <string name="order">Orders</string>
    <string name="image">Image</string>
    <string name="add">add</string>
    <string name="small">8oz</string>
    <string name="medium">14oz</string>
    <string name="large">22oz</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="red">Red</string>
    <string name="brown">Brown</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="size_option">Sizes</string>
    <string name="jar_option">Jar colour</string>
    <!-- Dropdown options for size -->
    <string-array name="size_options">
        <item>8oz</item>
        <item>14oz</item>
        <item>22oz</item>
    </string-array>

    <!-- Dropdown options for color -->
    <string-array name="color_options">
        <item>Red</item>
        <item>Light Blue</item>
        <item>White</item>
        <item>Pink</item>
        <item>Black</item>
    </string-array>
</resources>