<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <!-- Empty Number Input Boxes (Code Inputs) -->
    <EditText
        android:id="@+id/code1_input"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/edit_input"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        android:hint="@string/code1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/code2_input"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/edit_input"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        android:hint="@string/code2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/code3_input"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/edit_input"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        android:hint="@string/code3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/code4_input"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="368dp"
        android:background="@drawable/edit_input"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        android:hint="@string/code4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logo or Title (Juney) -->
    <TextView
        android:layout_width="406dp"
        android:layout_height="120dp"
        android:fontFamily="@font/italianno_regular"
        android:gravity="center"
        android:text="@string/juney_display"
        android:textColor="#D9C5FA"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <!-- Verification Message Text -->
    <TextView
        android:id="@+id/pw_verification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/verify_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Confirm Button -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button"
        android:padding="12dp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
