<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Logo-->

    <Button
        android:id="@+id/backIcon"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/arrow"
        android:contentDescription="@string/back_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="148dp"
        android:layout_height="96dp"
        android:fontFamily="@font/italianno_regular"
        android:gravity="center"
        android:text="@string/juney_display"
        android:textColor="#D9C5FA"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <!-- Reset your password text -->
    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/reset_your_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- New pw Input -->
    <EditText
        android:id="@+id/new_password_input"
        android:layout_width="273dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/edit_input"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_title" />

    <!-- Confirm Pw Input -->
    <EditText
        android:id="@+id/pw2_input"
        android:layout_width="273dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:autofillHints=""
        android:background="@drawable/edit_input"
        android:hint="@string/hint_cfpassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_title" />


    <!-- Confirm Button -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="228dp"
        android:layout_height="55dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/button"
        android:padding="12dp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
