<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <!-- container for scrollable content -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="0dp">


<!-- section one-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ourStory"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:src="@drawable/story"
                android:contentDescription="@string/zodiac"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:layout_margin="0dp"/>
<!--section 1 text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:layout_margin="20dp"
                android:text="@string/story"
                android:textColor="@color/white"
                android:textSize="40sp" />



        </FrameLayout>

<!--section 2-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--section 2 text-->
            <ImageView
                android:id="@+id/theTeam"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_margin="0dp"
                android:contentDescription="@string/season"
                android:scaleType="centerCrop"
                android:src="@drawable/team" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:layout_margin="20dp"
                android:text="@string/team"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </FrameLayout>

        <!--section 3-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/contactUs"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_margin="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/contact"
                android:contentDescription="@string/contact"/>
<!--section 3 text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:layout_margin="20dp"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="40sp" />




        </FrameLayout>

    </LinearLayout>

</ScrollView>