<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <!-- Container for scrollable content -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="0dp">

        <!-- Image content -->

        <ImageButton
            android:id="@+id/floral"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floral"
            android:scaleType="centerCrop"
            android:src="@drawable/floral" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/fruity"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:src="@drawable/fruit"
                android:contentDescription="@string/floral"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruity"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:fontFamily="@font/amiri_bold"/>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:id="@+id/gourmand"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_margin="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/gourmand"
                android:scaleType="centerCrop"
                android:src="@drawable/gourmand" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gourmand"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:fontFamily="@font/amiri"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/woodsy"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_margin="0dp"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent"
                android:src="@drawable/wood"
                android:contentDescription="@string/wood"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wood"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"/>

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/relaxing"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_margin="0dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/relaxing"
                android:contentDescription="@string/relaxing"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relaxing"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans"/>


        </FrameLayout>


    </LinearLayout>

</ScrollView>